# circleci-test-splitting-debugger

./: .dockerignore  Dockerfile  README.md  cli.py  docker-entrypoint.sh  pyproject.toml  requirements.txt
.circleci/: config.yml
scripts/: get-testcases.sh
