[tool.poetry]
name = "circleci-test-splitting-debugger"
version = "0.1.0"
description = "Debugger tool for CircleCI test-splitting situations"
authors = ["kelvintaywl <kelvintaywl@gmail.com>"]

[tool.poetry.dependencies]
python = "3.10.9"
prtpy = "^0.8.2"

[tool.poetry.dev-dependencies]
black = "^23.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
